--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
     "@chainlink/contracts": "^1.2.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^3.4.0",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
     "hardhat": "^2.22.10"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-verify": "^2.0.10",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "hardhat-deploy": "^0.12.4"
   }
 }
